--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
+    "react-split": "^2.0.14",
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
